# gen-completions

./: .gitattributes  .gitignore  .release-please-manifest.json  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  release-please-config.json
.github/workflows/: lint.yml  release-please.yml  test.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
lib/: CHANGELOG.md  Cargo.toml
lib/src/: lib.rs  result.rs
lib/src/parse/: mod.rs  parse_man.rs
samples/scdoc/: slurp.1  slurp.1.scd  sway.1.scd
samples/type1/: git-log.1
samples/type2/: df.1
scripts/: find-man.nu  lint.sh  read-snap.nu
src/: bin.rs  lib.rs  main.rs
src/parse/: mod.rs  parse_man.rs  podman.rs  type1.rs  type2.rs  type3.rs  type4.rs  util.rs
src/parse_deser/: error.rs  kdl.rs  mod.rs
src/parse_man/: darwin.rs  error.rs  mod.rs  podman.rs  scdoc.rs  type1.rs  type2.rs  type3.rs  type4.rs  util.rs
src/parse_serde/: mod.rs
tests/: README.md  gen_integration_tests.rs  git.in.txt  integration_tests.rs  man_integration_tests.rs
tests/resources/expected/: _git.zsh  _test1.bash  _test1.zsh  git.json  ncdu.json  rfcomm.json  sed.json  sway.json  test1-completions.nu  test1.nu
tests/resources/in/man1/: rfcomm.1  test1-sub1-nested.1  test1-sub1.1  test1-sub2.1  test1.1
tests/resources/man/expected/: _test1.zsh  bless.json  git.json  ncdu.json  rfcomm.json  sed.json  sway.json  test1.json
tests/resources/man/in/man1/: git.1  ncdu.1  sed.1  sway.1  test1-sub2.1
