[package]
name = "gen-completions"
version = "0.1.0"
description = "Generate Bash/Zsh completions from manpages or JSON/KDL files"
keywords = ["shell"]
categories = ["command-line-utilities"]
repository = "https://github.com/ysthakur/man-completions"
homepage = "https://github.com/ysthakur/man-completions"
license = "MIT"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
thiserror = "1.0"
log = "0.4"
miette = "5.10"
regex = "1.9"

# For parsing manpages
bzip2 = "0.4"
flate2 = "1.0"

# For deserializing from a file
serde = "1.0"
kdl = "4.6"
serde_kdl = "0.1"
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
