[package]
name = "gen-completions"
version = "0.5.1"
description = "Generate Bash/Zsh completions from manpages or JSON/KDL files"
keywords = ["shell"]
categories = ["command-line-utilities"]
repository = "https://github.com/ysthakur/gen-completions"
homepage = "https://github.com/ysthakur/gen-completions"
license = "MIT"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
indoc = "2"
log = "0.4"
miette = "5.10"
regex = "1.9"
thiserror = "1.0"

# For parsing manpages
bzip2 = "0.4"
flate2 = "1.0"

# For deserializing from a file
serde = "1.0"
kdl = "4.6"
serde_kdl = "0.1"
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1"
miette = { version = "5.10", features = ["fancy"] }
pretty_assertions = "1"
tempfile = "3"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
