[package]
name = "man_completions_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
man_completions = { path = "../lib" }

[[bin]]
name = "man_completions"
path = "src/main.rs"
